# iESP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  backend-file.cpp  backend-file.h  backend-nbd.cpp  backend-nbd.h  backend.cpp  backend.h  block-speed-randread.py  block-speed.py  bs-read.py  ci-runner.sh  ci.sh  codecov.sh  com-sockets.cpp  com-sockets.h  com.cpp  com.h  gen.h  iesp.spec  iscsi-pdu.cpp  iscsi-pdu.h  iscsi.cpp  iscsi.h  log.cpp  log.h  main.cpp  mingw64-github-ci.cmake  mingw64.cmake  plot-bs-read.sh  plot.sh  quick-test.cpp  random.cpp  random.h  scsi.cpp  scsi.h  server.cpp  server.h  (+11 more)
.github/workflows/: cppcheck.yaml  macos.yaml  platformio.yaml  posix.yaml  windows.yaml
ESP32/: backend-sdcard-teensy41.h  backend-sdcard.cpp  backend-sdcard.h  backend.cpp  com-arduino.cpp  com-arduino.h  com-sockets.h  data  iscsi.h  main.ino  platformio.ini  prepare.py  snmp  snmp.cpp  wifi-management.cpp  wifi-management.h
ESP32/data/: cfg-iESP.json.example
RP2040/: backend-sdcard.cpp  backend-sdcard.h  backend.cpp  backend.h  com-arduino.cpp  com-arduino.h  com.cpp  com.h  gen.h  iscsi-pdu.cpp  iscsi-pdu.h  iscsi.cpp  iscsi.h  log.h  lwipopts.h  main.ino  platformio.ini  random.cpp  random.h  scsi.cpp  scsi.h  server.cpp  server.h  session.cpp  session.h  utils.cpp  utils.h  version.cpp  wifi.h
debian/: changelog  control
microcontrollers/: backend-sdcard-teensy41.cpp  backend-sdcard-teensy41.h  backend-sdcard.cpp  backend-sdcard.h  backend.h  com-arduino.cpp  com-arduino.h  com-sockets.cpp  iscsi-pdu.cpp  iscsi-pdu.h  iscsi.cpp  main.h  main.ino  platformio.ini  prepare.py  random.h  scsi.cpp  scsi.h  server.cpp  session.h  snmp.h  syslog-listener.py  wifi-management.cpp  wifi-management.h  wifi.h  wt32-eth01.scad
microcontrollers/RP2040/: backend-sdcard-rp2040w.cpp  backend-sdcard-rp2040w.h  backend-sdcard.cpp  backend-sdcard.h  com-arduino.cpp  main.ino  platformio.ini  prepare.py  session.cpp  wifi.h
microcontrollers/RP2040W/: backend-sdcard-rp2040w.cpp  backend-sdcard-rp2040w.h  com-arduino.h  main.ino  platformio.ini  prepare.py  random.cpp
microcontrollers/data/: cfg-iESP.json.example
snmp/: block.cpp  block.h  snmp.cpp  snmp.h  snmp_data.cpp  snmp_data.h  snmp_elem.cpp  snmp_elem.h
